# ProductStarMiddle

./: HW_1_1.py  pyproject.toml  requirements.txt
Homeworks/: HW_1_1.py  SquareRootEquation.py  Test_SquareRootEquation.py
Homeworks/HW2_SquareRoots/: Test_SquareRootEquation.py
Homeworks/HW3_QuizGame/: QuizGame.py  Test_SquizGame.py  questions.json
Homeworks/HW4/: ListOperations.py
Homeworks/HW_6_Libs/: HW6_Notebook.ipynb  homework.ipynb
Homeworks/HW_7_Data_Structures/: Homework.ipynb
Homeworks/HW_8_GoogleSearch/: gsearch.db  gsearch.py
Homeworks/HW_9_Exceptions/: workshop.ipynb
