[tool.poetry]
name = "productstarmiddle"
version = "0.1.0"
description = ""
authors = ["Dmitry Morozov <9984398@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^2.0.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
